fixed nav spacing bug

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ p {
   max-width: auto;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2; 
+  height: 8vw;
 }
 
 .navbar div {
@@ -65,7 +66,6 @@ p {
   margin: 10px;
   margin-left: 16px;
   text-decoration: none;
-  padding: 1vw;
   font-size: 20px;
 }
 
